# wasm-bench-arkworks

./: .gitignore  BENCHMARKS-ARKWORKS-WASMTIME.md  BENCHMARKS.md  benchmark.md
.github/workflows/: benchmark-macos.yml  benchmark.yml
benches/: main.rs
sightglass/: .gitignore  Cargo.toml
sightglass/benchmarks/: build.sh
sightglass/benchmarks/bls12-377-msm-g1-10/: Cargo.toml  Dockerfile
sightglass/benchmarks/bls12-377-msm-g1-10/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bls12-377-msm-g1-1000/: Dockerfile
sightglass/benchmarks/bls12-377-msm-g1-1000/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bls12-377-msm-g2-10/: Cargo.toml  Dockerfile
sightglass/benchmarks/bls12-377-msm-g2-10/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bls12-377-msm-g2-1000/: Dockerfile
sightglass/benchmarks/bls12-377-msm-g2-1000/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bls12-377-mul-affine-g1/: Dockerfile
sightglass/benchmarks/bls12-377-mul-affine-g1/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bls12-377-mul-affine-g1/rust-benchmark/src/: bls12_377.rs  main.rs
sightglass/benchmarks/bls12-377-mul-affine-g2/: Dockerfile
sightglass/benchmarks/bls12-377-mul-affine-g2/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bls12-377-mul-projective-g1/: Dockerfile
sightglass/benchmarks/bls12-377-mul-projective-g1/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bls12-377-mul-projective-g2/: Dockerfile
sightglass/benchmarks/bls12-377-mul-projective-g2/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bls12-377-pairing/: Dockerfile
sightglass/benchmarks/bls12-377-pairing/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bls12-381-msm-g1-10/: Dockerfile
sightglass/benchmarks/bls12-381-msm-g1-10/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bls12-381-msm-g1-1000/: Dockerfile
sightglass/benchmarks/bls12-381-msm-g1-1000/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bls12-381-msm-g2-10/: Dockerfile
sightglass/benchmarks/bls12-381-msm-g2-10/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bls12-381-msm-g2-1000/: Dockerfile
sightglass/benchmarks/bls12-381-msm-g2-1000/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bls12-381-mul-affine-g1/: Dockerfile
sightglass/benchmarks/bls12-381-mul-affine-g1/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bls12-381-mul-affine-g2/: Dockerfile
sightglass/benchmarks/bls12-381-mul-affine-g2/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bls12-381-mul-projective-g1/: Dockerfile
sightglass/benchmarks/bls12-381-mul-projective-g1/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bls12-381-mul-projective-g1/rust-benchmark/src/: bls12_381.rs  main.rs
sightglass/benchmarks/bls12-381-mul-projective-g2/: Dockerfile
sightglass/benchmarks/bls12-381-mul-projective-g2/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bls12-381-pairing/: Dockerfile
sightglass/benchmarks/bls12-381-pairing/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bw6-761-msm-g1-10/: Dockerfile
sightglass/benchmarks/bw6-761-msm-g1-10/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bw6-761-msm-g1-1000/: Dockerfile
sightglass/benchmarks/bw6-761-msm-g1-1000/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bw6-761-msm-g2-10/: Dockerfile
sightglass/benchmarks/bw6-761-msm-g2-10/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bw6-761-msm-g2-10/rust-benchmark/src/: main.rs  utils.rs
sightglass/benchmarks/bw6-761-msm-g2-1000/: Dockerfile
sightglass/benchmarks/bw6-761-msm-g2-1000/rust-benchmark/: Cargo.toml
sightglass/benchmarks/bw6-761-mul-affine-g1/: Dockerfile
sightglass/benchmarks/bw6-761-mul-affine-g2/: Dockerfile
sightglass/benchmarks/bw6-761-mul-projective-g1/: Dockerfile
sightglass/benchmarks/bw6-761-mul-projective-g2/: Dockerfile
sightglass/benchmarks/bw6-761-pairing/: Dockerfile
sightglass/benchmarks/ed-on-bls12-377-msm-10/: Dockerfile
sightglass/benchmarks/ed-on-bls12-377-msm-10/rust-benchmark/: Cargo.toml
sightglass/benchmarks/ed-on-bls12-377-msm-10/rust-benchmark/src/: ed_on_bls12_377.rs  main.rs
sightglass/benchmarks/ed-on-bls12-377-msm-1000/: Dockerfile
sightglass/benchmarks/ed-on-bls12-377-msm-1000/rust-benchmark/: Cargo.toml
sightglass/benchmarks/ed-on-bls12-377-msm-1000/rust-benchmark/src/: ed_on_bls12_377.rs  main.rs
sightglass/benchmarks/ed-on-bls12-377-mul-affine/: Dockerfile
sightglass/benchmarks/ed-on-bls12-377-mul-projective/: Dockerfile
sightglass/benchmarks/ed-on-bls12-381-bandersnatch-msm-sw-10/: Dockerfile
sightglass/benchmarks/ed-on-bls12-381-bandersnatch-msm-sw-1000/: Dockerfile
sightglass/benchmarks/ed-on-bls12-381-bandersnatch-msm-te-10/: Dockerfile
sightglass/benchmarks/ed-on-bls12-381-bandersnatch-msm-te-1000/: Dockerfile
sightglass/benchmarks/ed-on-bls12-381-msm-sw-10/: Dockerfile
sightglass/benchmarks/ed-on-bls12-381-msm-sw-1000/: Dockerfile
sightglass/benchmarks/ed-on-bls12-381-msm-te-10/: Dockerfile
sightglass/benchmarks/ed-on-bls12-381-msm-te-1000/: Dockerfile
sightglass/benchmarks/ed-on-bls12-381-msm-te-1000/rust-benchmark/: Cargo.toml
sightglass/benchmarks/ed-on-bls12-381-msm-te-1000/rust-benchmark/src/: ed_on_bls12_381.rs  main.rs
sightglass/benchmarks/ed-on-bls12-381-mul-affine-sw/: Dockerfile
sightglass/benchmarks/ed-on-bls12-381-mul-affine-te/: Dockerfile
sightglass/benchmarks/ed-on-bls12-381-mul-projective-sw/: Dockerfile
sightglass/benchmarks/ed-on-bls12-381-mul-projective-te/: Dockerfile
sightglass/benchmarks/groth16/: Dockerfile
sightglass/benchmarks/groth16/rust-benchmark/: Cargo.toml
sightglass/benchmarks/groth16/rust-benchmark/src/: bls12_381.rs  groth16.rs  main.rs
sightglass/benchmarks/utils/: Cargo.toml
sightglass/benchmarks/utils/src/: ed_on_bls12_377.rs  lib.rs
sightglass/crates/analysis/: Cargo.toml
sightglass/crates/api/: Cargo.toml
sightglass/crates/cli/: Cargo.toml
sightglass/crates/data/: Cargo.toml
sightglass/crates/fingerprint/: Cargo.toml
sightglass/crates/recorder/: Cargo.toml
sightglass/crates/upload/: Cargo.toml
src/: lib.rs
(+107 files in other folders)
