[package]
name = "bls12-377-mul-affine-g1"
version = "0.1.0"
edition = "2021"

[dependencies]
sightglass-api = "0.1"
ark-bls12-377 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
frame-support = { version = "19.0.0" }

[features]
default = [ "std" ]
std = [
	"ark-bls12-377/std",
	"ark-ec/std",
	"ark-ff/std",
	"ark-std/std",
"frame-support/std"
]
