[package]
name = "bw6-761-msm-g2-10"
version = "0.1.0"
edition = "2021"

[dependencies]
sightglass-api = "0.1"
ark-bw6-761 = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }


[features]
default = [ "std" ]
std = [
	"ark-bw6-761/std",
	"ark-ec/std",
	"ark-ff/std",
	"ark-std/std",
]
